# ai-text-analyzer

./: .gitignore  README.md  _ci_payload.json  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
subdir/: test.txt
tests/: __init__.py  test_main.py
