[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ai-text-analyzer"
version = "1.0.0"
description = "多模型AI文本分析工具 - 情感分析、文本分类、关键词提取、文本摘要"
readme = "README.md"
authors = [
    { name = "AI Text Analyzer Team", email = "dev@example.com" },
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "textblob>=0.17.0",
    "nltk>=3.8.0",
    "vaderSentiment>=3.3.0",
    "scikit-learn>=1.0.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "flake8>=6.0.0",
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-ra",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "online: marks tests that require network access",
]

[tool.flake8]
max_line_length = 100
extend_ignore = [
    "E203",  # whitespace before ':' (conflicts with black)
    "W503",  # line break before binary operator
]
exclude = [
    ".git",
    "__pycache__",
    "venv",
    ".venv",
    "build",
    "dist",
    "*.egg-info",
]
per-file-ignores = [
    "tests/*:S101",
]
